Project

General

Profile

Actions

Bug #61251

open

S3 ListMultipartUploads action shows current timestamp instead of actual upload start time

Added by Victor Tsykanov 11 months ago. Updated 11 months ago.

Status:
Pending Backport
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Tags:
s3 low-hanging-fruit multipart backport_processed
Backport:
quincy reef
Regression:
Yes
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

S3 ListMultipartUploads action returns current timestamp in Upload/Initiated field instead of actual upload start time.

Example:

<?xml version="1.0" encoding="UTF-8"?>
<ListMultipartUploadsResult xmlns="http://s3.amazonaws.com/doc/2006-03-01/">
    <Tenant>orsxg5c7obzg62tfmn2f6vrujritkq2qja3uerkwircfgm2xkm2dmssrijiucui</Tenant>
    <Bucket>bucket-8ec03ff4-0d47-40ba-b99b-ce9c1a05d317</Bucket>
    <NextKeyMarker>file-bc2c391d-f676-457b-b2c2-b68e1d2b7cec</NextKeyMarker>
    <NextUploadIdMarker>2~4WFUDGCm_93vGhTPD8ci2dQTFkAto2l</NextUploadIdMarker>
    <MaxUploads>1000</MaxUploads>
    <IsTruncated>false</IsTruncated>
    <Upload>
        <Key>file-8796097a-c589-45a4-a08d-ea609b71ab05</Key>
        <UploadId>2~2hw0xjD_JOifvklWq-ea7qTZBZbZyLk</UploadId>
        <Initiator>
            <ID>orsxg5c7obzg62tfmn2f6vrujritkq2qja3uerkwircfgm2xkm2dmssrijiucui$cfdeb891-46a9-4f36-8d0a-ec374d8b21b7
            </ID>
            <DisplayName>User cfdeb891-46a9-4f36-8d0a-ec374d8b21b7</DisplayName>
        </Initiator>
        <Owner>
            <ID>orsxg5c7obzg62tfmn2f6vrujritkq2qja3uerkwircfgm2xkm2dmssrijiucui$cfdeb891-46a9-4f36-8d0a-ec374d8b21b7
            </ID>
            <DisplayName>User cfdeb891-46a9-4f36-8d0a-ec374d8b21b7</DisplayName>
        </Owner>
        <StorageClass>STANDARD</StorageClass>
        <Initiated>2023-05-17T09:20:03.271Z</Initiated>
    </Upload>
</ListMultipartUploadsResult>

Repeating the same request results in response with changed value in Initiated tag:

<?xml version="1.0" encoding="UTF-8"?>
<ListMultipartUploadsResult xmlns="http://s3.amazonaws.com/doc/2006-03-01/">
    <Tenant>orsxg5c7obzg62tfmn2f6vrujritkq2qja3uerkwircfgm2xkm2dmssrijiucui</Tenant>
    <Bucket>bucket-8ec03ff4-0d47-40ba-b99b-ce9c1a05d317</Bucket>
    <NextKeyMarker>file-bc2c391d-f676-457b-b2c2-b68e1d2b7cec</NextKeyMarker>
    <NextUploadIdMarker>2~4WFUDGCm_93vGhTPD8ci2dQTFkAto2l</NextUploadIdMarker>
    <MaxUploads>1000</MaxUploads>
    <IsTruncated>false</IsTruncated>
    <Upload>
        <Key>file-8796097a-c589-45a4-a08d-ea609b71ab05</Key>
        <UploadId>2~2hw0xjD_JOifvklWq-ea7qTZBZbZyLk</UploadId>
        <Initiator>
            <ID>orsxg5c7obzg62tfmn2f6vrujritkq2qja3uerkwircfgm2xkm2dmssrijiucui$cfdeb891-46a9-4f36-8d0a-ec374d8b21b7
            </ID>
            <DisplayName>User cfdeb891-46a9-4f36-8d0a-ec374d8b21b7</DisplayName>
        </Initiator>
        <Owner>
            <ID>orsxg5c7obzg62tfmn2f6vrujritkq2qja3uerkwircfgm2xkm2dmssrijiucui$cfdeb891-46a9-4f36-8d0a-ec374d8b21b7
            </ID>
            <DisplayName>User cfdeb891-46a9-4f36-8d0a-ec374d8b21b7</DisplayName>
        </Owner>
        <StorageClass>STANDARD</StorageClass>
        <Initiated>2023-05-17T09:20:05.738Z</Initiated>
    </Upload>
</ListMultipartUploadsResult>


Related issues 2 (2 open0 closed)

Copied to rgw - Backport #61509: reef: S3 ListMultipartUploads action shows current timestamp instead of actual upload start timeIn ProgressDaniel GryniewiczActions
Copied to rgw - Backport #61510: quincy: S3 ListMultipartUploads action shows current timestamp instead of actual upload start timeIn ProgressDaniel GryniewiczActions
Actions #1

Updated by Casey Bodley 11 months ago

  • Tags set to s3 low-hanging-fruit multipart
  • Backport set to pacific quincy reef
Actions #2

Updated by Daniel Gryniewicz 11 months ago

  • Assignee set to Daniel Gryniewicz
Actions #3

Updated by Daniel Gryniewicz 11 months ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 51763
Actions #4

Updated by Daniel Gryniewicz 11 months ago

  • Backport changed from pacific quincy reef to quincy reef
Actions #5

Updated by Daniel Gryniewicz 11 months ago

  • Status changed from Fix Under Review to Pending Backport
Actions #6

Updated by Backport Bot 11 months ago

  • Copied to Backport #61509: reef: S3 ListMultipartUploads action shows current timestamp instead of actual upload start time added
Actions #7

Updated by Backport Bot 11 months ago

  • Copied to Backport #61510: quincy: S3 ListMultipartUploads action shows current timestamp instead of actual upload start time added
Actions #8

Updated by Backport Bot 11 months ago

  • Tags changed from s3 low-hanging-fruit multipart to s3 low-hanging-fruit multipart backport_processed
Actions

Also available in: Atom PDF