RGW - Use correct multipart upload mtime

During multipart listing, the mtime of the uploads were not being
loaded, resulting in the current time being returned.  Fix this by
setting the correct mtime.

Fixes: https://tracker.ceph.com/issues/61251
Signed-off-by: Daniel Gryniewicz <dang@redhat.com>
(cherry picked from commit 45d4352ad2bf020ab75d8047809ea5e11cbe1c8d)